# zenoviz

./: .gitignore  CLAUDE.md  README.md  amplify.yml  pyproject.toml
backend/: .env.example  README.md  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2e589c823ba7_initial_schema.py  45f685eb08de_add_locker_fields.py  46bc1e75c3e7_add_gallery_images_table.py  548d52b4d03d_separate_access_type_pricing.py
backend/openspec/specs/: architecture.md
backend/src/: dependencies.py  main.py
backend/src/clients/: base.py
backend/src/config/: app_settings.py
backend/src/db/: session.py
backend/src/domain/: study_pricing.py  study_room_rules.py  user.py
backend/src/jobs/: expiry.py
backend/src/models/: auth.py  roles.py  study_api.py  users.py
backend/src/repositories/: role_repository.py  s3_directory_endpoint.py  storage_repository.py  study_repository.py
backend/src/routes/: admin_roles.py  admin_study.py  admin_users.py  auth.py  bookings.py
backend/src/services/: auth_service.py  booking_service.py  role_service.py  user_admin_service.py
backend/tests/: conftest.py  test_admin_users.py  test_domain_and_models.py  test_get_current_user.py  test_jwks_cache.py  test_main.py  test_rbac.py  test_role_management.py  test_s3_directory_endpoint.py  test_storage_repository.py
backend/tests/clients/: test_cognito_abc.py  test_cognito_client.py
backend/tests/routes/: test_auth_routes.py
backend/tests/services/: test_auth_service.py  test_payment_settings_response.py
backend/tests/study/: test_approval_amount.py  (+4 more)
(+157 files in other folders)
